firmware/defmt-test/macros/tests/ui/init-duplicate.stderr
error: only a single `#[init]` function can be defined
 --> tests/ui/init-duplicate.rs:9:8
  |
9 |     fn second() {}
  |        ^^^^^^
